[package]
authors = ["James Nugent <james@jen20.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Health Checking module of `tonic` gRPC implementation.
"""
documentation = "https://docs.rs/tonic-health/0.10.2"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "healthcheck"]
license = "MIT"
name = "tonic-health"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.10.2"

[features]
default = ["transport"]
transport = []

[dependencies]
async-stream = "0.3"
prost = "0.12"
tokio = {version = "1.0", features = ["sync"]}
tokio-stream = "0.1"
tonic = { version = "0.10", path = "../tonic", default-features = false, features = ["codegen", "prost"] }

[dev-dependencies]
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1"
prost-types = "0.12"
