[package]
authors = ["James Nugent <james@jen20.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Health Checking module of `tonic` gRPC implementation.
"""
documentation = "https://docs.rs/tonic-health/0.12.2"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "healthcheck"]
license = "MIT AND Apache-2.0"
name = "tonic-health"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.12.2"

[features]
default = ["transport"]
transport = []

[dependencies]
async-stream = "0.3"
prost = "0.13"
tokio = {version = "1.0", features = ["sync"]}
tokio-stream = "0.1"
tonic = { version = "0.12", path = "../tonic", default-features = false, features = ["codegen", "prost"] }

[dev-dependencies]
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1"
prost-types = "0.13"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",

  # major released
  "bytes::*",
  "http::*",
  "http_body::*",

  # not major released
  "prost::*",

  "futures_core::stream::Stream",
  "http_body_util::combinators::box_body::UnsyncBoxBody",
  "tower_service::Service",
]
