[package]
authors = ["James Nugent <james@jen20.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Health Checking module of `tonic` gRPC implementation.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "healthcheck"]
license = "MIT AND Apache-2.0"
name = "tonic-health"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.14.0"
rust-version = { workspace = true }

[dependencies]
prost = "0.14"
tokio = {version = "1.0", features = ["sync"]}
tokio-stream = {version = "0.1", default-features = false, features = ["sync"]}
tonic = { version = "0.14.0", path = "../tonic", default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14.0", path = "../tonic-prost", default-features = false }

[dev-dependencies]
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
prost-types = "0.14.0"

[lints]
workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",

  # major released
  "bytes::*",
  "http::*",
  "http_body::*",

  # not major released
  "prost::*",

  "futures_core::stream::Stream",
  "tower_service::Service",
]
