[package]
name = "tonic-interop"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = "=0.2.0-alpha.4"
tonic = { path = "../tonic" }
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
http = "0.1"
futures-util-preview = "=0.3.0-alpha.18"

console = "0.7"
structopt = "0.2"
pretty_env_logger = "0.3"

tracing = "0.1"
tracing-fmt = "0.0.1-alpha.1"
tracing-log = "0.0.1-alpha.1"

[build-dependencies]
tonic-build = { path = "../tonic-build" }
