[package]
name = "tonic-interop"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["tonic"]
tls_openssl = ["tonic", "tonic/tls", "tonic/openssl"]
tls_rustls = ["tonic", "tonic/tls", "tonic/rustls"]

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = "=0.2.0-alpha.6"
tonic = { path = "../tonic", optional = true }
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
http = "0.1"
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
async-stream = "0.1.2"
tower = "=0.3.0-alpha.2"
http-body = "=0.2.0-alpha.3"

console = "0.7"
structopt = "0.2"

tracing = "0.1"
tracing-subscriber = "0.1.3"
tracing-log = "0.1.0"

[build-dependencies]
tonic-build = { path = "../tonic-build" }
