[package]
name = "tonic-macros"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = "=0.2.0-alpha.2"
tonic = { path = "../tonic" }
futures-preview = "=0.3.0-alpha.18"
