[package]
name = "tonic-prost-build"
version = "0.14.1"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = "Prost build integration for tonic"
readme = "README.md"
categories = ["development-tools::build-utils", "network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "prost", "protobuf", "tonic"]

[features]
default = ["transport", "cleanup-markdown"]
transport = ["tonic-build/transport"]
cleanup-markdown = ["prost-build/cleanup-markdown"]

[dependencies]
tonic-build = { version = "0.14.0", path = "../tonic-build", default-features = false }
prost-build = { version = "0.14" }
prost-types = { version = "0.14" }
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
tempfile = "3.0"

[dev-dependencies]
tonic = { version = "0.14.0", path = "../tonic", default-features = false }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic_build::*",
  "prost_build::*",
  "prost_types::*"
]
