[package]
name = "tonic-prost"
version = "0.14.2"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = "Prost codec implementation for tonic"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "prost", "protobuf", "tonic"]

[dependencies]
tonic = { version = "0.14.0", path = "../tonic", default-features = false }
prost = "0.14"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
http-body = "1"
http-body-util = "0.1"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",
  "prost::*",
  "prost"
]
