[package]
authors = [
  "James Nugent <james@jen20.com>",
  "Samani G. Gikandi <samani@gojulas.com>",
]
categories = ["network-programming", "asynchronous"]
description = """
Server Reflection module of `tonic` gRPC implementation.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
documentation = "https://docs.rs/tonic-reflection/0.10.2"
keywords = ["rpc", "grpc", "async", "reflection"]
license = "MIT"
name = "tonic-reflection"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.10.2"

[dependencies]
prost = "0.12"
prost-types = "0.12"
tokio = {version = "1.0", features = ["sync", "rt"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = { version = "0.10", path = "../tonic", default-features = false, features = ["codegen", "prost"] }

[dev-dependencies]
tonic = { version = "0.10", path = "../tonic", default-features = false, features = ["transport"] }
