[package]
authors = [
  "James Nugent <james@jen20.com>",
  "Samani G. Gikandi <samani@gojulas.com>",
]
categories = ["network-programming", "asynchronous"]
description = """
Server Reflection module of `tonic` gRPC implementation.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
documentation = "https://docs.rs/tonic-reflection/0.13.0"
keywords = ["rpc", "grpc", "async", "reflection"]
license = "MIT"
name = "tonic-reflection"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.13.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
server = ["dep:prost-types", "dep:tokio", "dep:tokio-stream"]
default = ["server"]

[dependencies]
prost = "0.13"
prost-types = {version = "0.13", optional = true}
tokio = { version = "1.0", features = ["sync", "rt"], optional = true }
tokio-stream = {version = "0.1", default-features = false, optional = true }
tonic = { version = "0.13.0", path = "../tonic", default-features = false, features = ["codegen", "prost"] }

[dev-dependencies]
tokio-stream = {version = "0.1", default-features = false, features = ["net"]}
tonic = { version = "0.13.0", path = "../tonic", default-features = false, features = ["transport"] }

[lints]
workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",

  # major released
  "bytes::*",
  "http::*",
  "http_body::*",

  # not major released
  "prost::*",
  "prost_types::*",

  "futures_core::stream::Stream",
  "tower_service::Service",
]
