[package]
authors = [
  "Lucio Franco <luciofranco14@gmail.com>",
  "Rafael Lemos <flemos.rafael.dev@gmail.com>"
]
categories = ["web-programming", "network-programming", "asynchronous"]
description = """
A collection of useful protobuf types that can be used with `tonic`.
"""
documentation = "https://docs.rs/tonic-types/0.13.0"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "protobuf"]
license = "MIT"
name = "tonic-types"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.13.0"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.13.0", path = "../tonic", default-features = false }

[lints]
workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",

  # not major released
  "prost::*",
  "prost_types::*",
]
