[package]
authors = ["Juan Alvarez <alce@me.com>"]
categories = ["network-programming", "asynchronous"]
description = """
grpc-web protocol translation for tonic services.
"""
documentation = "https://docs.rs/tonic-web/0.12.1"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "grpc-web"]
license = "MIT"
name = "tonic-web"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.12.1"

[dependencies]
base64 = "0.22"
bytes = "1"
tokio-stream = "0.1"
http = "1"
http-body = "1"
http-body-util = "0.1"
pin-project = "1"
tonic = { version = "0.12", path = "../tonic", default-features = false }
tower-service = "0.3"
tower-layer = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
