[package]
authors = ["Juan Alvarez <alce@me.com>"]
categories = ["network-programming", "asynchronous"]
description = """
grpc-web protocol translation for tonic services.
"""
documentation = "https://docs.rs/tonic-web/0.12.2"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "grpc-web"]
license = "MIT"
name = "tonic-web"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.12.2"

[dependencies]
base64 = "0.22"
bytes = "1"
tokio-stream = "0.1"
http = "1"
http-body = "1"
http-body-util = "0.1"
pin-project = "1"
tonic = { version = "0.12", path = "../tonic", default-features = false }
tower-service = "0.3"
tower-layer = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",

  # major released
  "bytes::*",
  "http::*",
  "http_body::*",

  # not major released
  "futures_core::stream::Stream",
  "http_body_util::combinators::box_body::UnsyncBoxBody",
  "tower_http::cors::Cors",
  "tower_layer::Layer",
  "tower_service::Service",
]
