[package]
authors = ["Juan Alvarez <alce@me.com>"]
categories = ["network-programming", "asynchronous"]
description = """
grpc-web protocol translation for tonic services.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "grpc-web"]
license = "MIT"
name = "tonic-web"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.14.2"
rust-version = { workspace = true }

[dependencies]
base64 = "0.22"
bytes = "1"
tokio-stream = { version = "0.1", default-features = false }
http = "1"
http-body = "1"
pin-project = "1"
tonic = { version = "0.14.0", path = "../tonic", default-features = false }
tower-service = "0.3"
tower-layer = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower-http = { version = "0.6", features = ["cors"] }
axum = { version = "0.8", default-features = false }

[lints]
workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "tonic::*",

  # major released
  "bytes::*",
  "http::*",
  "http_body::*",

  # not major released
  "futures_core::stream::Stream",
  "tower_layer::Layer",
  "tower_service::Service",
]
