[package]
name = "tonic-xds"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version.workspace = true
homepage = "https://github.com/hyperium/tonic"
repository = "https://github.com/hyperium/tonic"
license = "MIT"
publish = false
exclude = ["proto/test/*"]

[dependencies]
tonic = "0.14"
http = "1"
tower = { version = "0.5", default-features = false, features = ["discover"] }
dashmap = "6.1"
thiserror = "2.0.17"
futures = "0.3.31"
url = "2.5.8"
tonic-prost-build = { version = "0.14", optional = true }

[features]
test-proto-codegen = ["tonic-prost-build"]

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.14", features = [ "server", "channel", "tls-ring" ] }
prost = "0.14"
tonic-prost = "0.14"
anyhow = "1"
tokio-stream = "0.1"

[[bin]]
name = "gen-test-proto"
path = "proto/test/bin/gen_test_proto.rs"
required-features = ["test-proto-codegen"]
