[package]
name = "tonic-xds"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version.workspace = true
homepage = "https://github.com/hyperium/tonic"
repository = "https://github.com/hyperium/tonic"
authors = [
    "Ankur Mittal <ankurmit2006@gmail.com>",
    "Jeff Jiang <guokeno0@gmail.com>",
    "Lucio Franco <luciofranco14@gmail.com>",
    "Yutao Ma <ytma98@gmail.com>"
]
categories = ["web-programming", "network-programming", "asynchronous"]
description = """
xDS routing and load balancing implementation for Tonic and Tower services
"""
keywords = ["grpc", "xds"]
license = "MIT"
publish = false
exclude = ["proto/test/*"]

[dependencies]
tonic = "0.14"
http = "1"
http-body = "1"
pin-project-lite = "0.2"
tower = { version = "0.5", default-features = false, features = ["discover", "retry", "util"] }
arc-swap = "1"
dashmap = "6.1"
thiserror = "2.0.17"
url = "2.5.8"
futures-core = "0.3.31"
futures-util = "0.3"
bytes = "1"
xds-client = { version = "0.1.0-alpha.1", path = "../xds-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
envoy-types = "0.7"
prost = "0.14"
regex = "1"
tokio = { version = "1", features = ["sync", "time"] }
# Used for weighted cluster selection and fractional route matching — does not need
# cryptographic security, only statistical uniformity for traffic distribution.
fastrand = "2"
indexmap = "2"
tracing = "0.1"
tokio-stream = "0.1"
tokio-util = "0.7"
backoff = "0.4"
shared_http_body = "0.1"
tonic-prost = { version = "0.14", optional = true }

[lints]
workspace = true

[dev-dependencies]
xds-client = { version = "0.1.0-alpha.1", path = "../xds-client", features = ["test-util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "test-util"] }
tonic = { version = "0.14", features = [ "server", "channel", "tls-ring" ] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
async-stream = "0.3"
tempfile = "3.27.0"

[features]
testutil = ["dep:tonic-prost"]

# TLS crypto backend — pick exactly one.
tls-ring = ["tonic/tls-ring", "xds-client/tonic-tls-ring"]
tls-aws-lc = ["tonic/tls-aws-lc", "xds-client/tonic-tls-aws-lc"]

[[example]]
name = "channel"
required-features = ["testutil"]

[[example]]
name = "greeter_server"
required-features = ["testutil"]

[[example]]
name = "xds_server"
